Added Journal Writer

--- a/appsettings.json
+++ b/appsettings.json
@@ -11,5 +11,5 @@
     "DrumBot": "Server=217.28.223.127,17160;User Id=user_55517;Password=g!6Y+8TnD?w3;Database=db_356a9;"
   },
   "Token": "5176878772:AAFpdJVzLZDYK28WQim5YGUzd_lFrlaLsCU",
-  "Url": "https://c70e-109-191-232-180.ngrok.io/"
+  "Url": "https://d6af-109-191-232-180.ngrok.io/"
 }
